<resources>
    <string name="app_name">Counter</string>
    <string name="title_activity_create_event_type">CreateEventTypeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_list_or_create_event_type">ListOrCreateEventTypeActivity</string>
    <string name="event_description">Event<br />Description</string>
    <string name="settings">Settings</string>
    <string name="export_your_data">Export Your Data</string>
    <string name="about">About</string>
    <string name="to_be_implemented">This feature is not yet implemented, but it is coming soon.</string>

    <string name="about_toast">This is an app created by Henry Schmale. Current app version code is %d</string>
    <string name="create_event_type">Create Event Type</string>

    <string name="int_format">%d</string>
    <string name="no_description_attached_here">No description attached here</string>
    <string name="delete_event_type">Delete Event Type</string>
    <string name="most_recently_created">Most Recently Created</string>
    <string name="dialog_delete_event_type">Are you sure you want to delete this event type? (It can\'t be undone)</string>
    <string name="delete_affirmative">Yes I am 100%% sure</string>
    <string name="delete_negative">No I want to keep this type</string>
    <string name="title_delete_event_type">Delete Event Type?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_set_tracked_event_type_for_widget">
        SetTrackedEventTypeForWidgetActivity
    </string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="example_event_type">Example Event Type</string>
    <string name="track">Track</string>
    <string name="widget_big_time_error">ERROR BIG TIME</string>
    <string name="increment_counter">Increment Counter</string>
    <string name="decrement_counter">Decrement Counter</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="extra_id_text_description">Includes an extra description for every entry of the export. Useful for merging results from multiple sources for analysis</string>
    <string name="start_export">Start Export</string>

    <string name="progress_text">%d of %d events exported to \n %s</string>

    <string name="send_to">Share your export to other apps</string>
    <string name="share_export_via">Share Export Via</string>
    <string name="available_previous_exports">Available Previous Exports</string>
    <string name="share_this_export">Share this export</string>
    <string name="delete_this_export_forever">Delete this export forever</string>
    <string name="delete_export_msg">Are you sure you want to delete this export?</string>
    <string name="delete_export">Delete Export?</string>
    <string name="do_not_delete_export">No I don\'t want to delete this export</string>

</resources>