...
        android:orientation="horizontal"
        android:layout_below="@id/event_type_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_decrement"
            android:contentDescription="@string/increment_counter"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcorner"
            android:backgroundTint="@color/down_vote_color"
            android:src="@drawable/ic_baseline_remove_circle_outline_24" />

        <ImageButton
            android:id="@+id/btn_increment"
            android:contentDescription="@string/decrement_counter"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/roundcorner"
...
